# meal

./: .gitignore  .replit  app.py  deployment.txt  pyproject.toml  replit.md  requirements.txt
attached_assets/: Pasted-Create-a-Python-Flask-web-app-that-plans-meals-based-on-user-fridge-ingredients-dietary-preferences-1759167434275_1759167434276.txt
data/: add_indexes.py  init_db.py
data/data/: meal_planner.db
static/: manifest.json  service-worker.js
templates/: base.html  index.html  meal_plan.html  recipe_detail.html  samples.html
